[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inky-phat"
version = "0.1.2"
description = "Inky pHAT Driver - modernized fork"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pillow>=12.0.0",
]

[tool.setuptools]
package-dir = {"" = "library"}

[tool.setuptools.packages.find]
where = ["library"]
include = ["inkyphat*"]

[tool.setuptools.package-data]
inkyphat = ["fonts/*"]
